--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
         }
     ],
     "require": {
-        "php" : "~7.0|~7.1",
+        "php" : "~7.0|~7.1|~7.2|~7.3|~7.4|~8.0",
         "leedch/convert": "^1.0",
         "leedch/view": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
