--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php" : "~7.0|~7.1|~7.2|~7.3|~7.4|~8.0",
+        "php" : "~8.0|~8.1|~8.2",
         "leedch/convert": "^1.0",
         "leedch/view": "^1.0"
     },
