--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php" : "~8.0|~8.1|~8.2",
+        "php" : "~8.0|~8.1|~8.2|~8.3",
         "leedch/convert": "^1.0",
         "leedch/view": "^1.0"
     },
